# CSSinj

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CSSINJ.py  README.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md
.github/workflows/: publish-to-pypi.yml
cssinj/: CSSINJ.py  __init__.py  __main__.py  client.py  console.py  cssinjector.py  dom.py  file.py  injection.py  log.py  scanner.py
cssinj/exfiltrator/: cssinjector.py  injection.py  server.py
cssinj/scanner/: crawler.py  html_parser.py  scanner.py  utils.py
cssinj/strategies/: __init__.py  base.py  complete.py  fontface.py  recursive.py
cssinj/utils/: default.py  dom.py  error.py  html_parser.py  requester.py
tests/: conftest.py  test_client.py  test_console.py  test_dom.py  test_file.py  test_server.py  test_strategies.py
