[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "cssinj"
description = "A python tools to exploits CSS injection vulnerabilities to exfiltrate sensitive information from web applications."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name="Asako" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/DonAsako/cssINJ"
Issues = "https://github.com/DonAsako/cssINJ/issues"
